...
          value={todoDesc}
          onChangeText={text => setTodoDesc(text)}
          inputStyle={styles.input}
          placeholder={translate('listDetails.placeholder')}
        />
        <Pressable
          testID="add-todo-btn"
          onPress={() => {
            if (todoDesc) {
              dispatch(
                addTodo({
                  todo: {
                    id: '',
...
